--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -315,7 +315,7 @@ Logistic regression diagnostics showed  that key regression assumptions were met
 
 An examination of deviance residuals did not show any large outliers, i.e. no residual values were greater than 2 for all three models. Observations were also found to be independent at all year lags examined for all three models. 
 
-The Wald Test showed that logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Psuedo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This results was especially true for the Logistic:Sgen-Ricker model which had a hit ratio of 0.91 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
+The Wald Test showed that logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Psuedo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This results was especially true for the Logistic:Sgen-Ricker and Logistic:Sgen-priorCap model which had hit ratios ranging between 0.83 and 0.87 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
 <!--CH: this table and above text does not appear correctly on the knitted  pdf version. I'm not sure why. Also, I broke up the 1 pgh above into a few smaller ones; feel free to revise-->
 
 +-------------------------+--------------+-------------------+-----------------+
@@ -333,8 +333,8 @@ The Wald Test showed that logistic model coefficient for aggregate abundance was
 +-------------------------+--------------+-------------------+-----------------+
 | Pseudo-$R^2$            | 0.60         | 0.61              | 0.40
 +-------------------------+--------------+-------------------+-----------------+
-| Hit Ratio (p= 50%,      | 0.91, 0.83   | 0.87, 0.87,       | 0.76, 0.81,
-| 66%, 90%, 99%)          | 0.78, 0.74   | 0.87, 0.74        | 0.76, 0.52
+| Hit Ratio (p= 50%,      | 0.87, 0.83   | 0.83, 0.83,       | 0.76, 0.71,
+| 66%, 90%, 99%)          | 0.74, 0.70   | 0.83, 0.74        | 0.76, 0.52
 +-------------------------+--------------+-------------------+-----------------+
 
 Table: (\#tab:logisticDiagIFC2020) Model diagnostic statistics from Sgen:LRP, Sgen_priorCap:LRP, and Dist-LRP model fits. A description of diagnostic tests is provided in Section 2. Hit ratios are shown for all four probability thresholds considered.  The symbol '*' indicates a result that only marginally met the recommended criteria for demonstrating good model fit.  
@@ -347,11 +347,12 @@ knitr::include_graphics("figure/coho-logisticFitDiag-2020acf.png")
 ```  
 
 
-Sample sizes were small due to the short time series available for Interior Fraser Coho; only 23 years of observations were available to fit logistic regression models. @peduzziSimulationStudyNumber1996 recommend a minimum requirement of 10 data points for the least frequent outcome based on their simulation studies in the field of clinical epidemiology. In our case, the least frequent outcome was the failure of all CUs to be above their benchmarks (i.e., 0). We were not able to make this minimum requirement for any of our model fits; we had only 7, 8, and 5 data points at the least frequent outcome for the Logistic:Sgen-Ricker, Logistic:Sgen-priorCap, and Logistic-IFCRT models, respectively. <!--CW: need to confirm with Kendra where are these numbers calculated Based on the current ratio of successes and fails in the data, the estimated minimum sample sizes that would be required to meet the criteria of @peduzziSimulationStudyNumber1996 ranged from 26 to 77 years.--> However, despite small sample sizes, hit ratios are high for all models at p = 50%.  As a result, we suggest that logistic regression-based LRPs may still be useful for this SMU.  We proceeded with retrospective analyses in order to examine how sensitive LRPs based on these model fits were to variations in the level of available data.
+Sample sizes were small due to the short time series available for Interior Fraser Coho; only 23 years of observations were available to fit logistic regression models. @peduzziSimulationStudyNumber1996 recommend a minimum requirement of 10 data points for the least frequent outcome based on their simulation studies in the field of clinical epidemiology. In our case, the least frequent outcome was the failure of all CUs to be above their benchmarks (i.e., 0). We were not able to make this minimum requirement for any of our model fits; we had only 7, 8, and 5 data points at the least frequent outcome for the Logistic:Sgen-Ricker, Logistic:Sgen-priorCap, and Logistic-IFCRT models, respectively. <!--CW: need to confirm with Kendra where are these numbers calculated: Based on the current ratio of successes and fails in the data, the estimated minimum sample sizes that would be required to meet the criteria of @peduzziSimulationStudyNumber1996 ranged from 26 to 77 years. new values are 13-16--> However, despite small sample sizes, hit ratios are high for all models at p = 50%.  As a result, we suggest that logistic regression-based LRPs may still be useful for this SMU.  We proceeded with retrospective analyses in order to examine how sensitive LRPs based on these model fits were to variations in the level of available data.
 
 ***Retrospective Analysis***
 
-2015 was the first year in which the available IFC time series was long enough to estimate logistic regression-based LRPs using the Logistic:Sgen-priorCap and Logistic:IFCRT models. However, the Logistic:Sgen-priorCap model was unable to converge on an LRP estimate in 2018. The Logistic:Sgen-Ricker model required an additional two years of data before LRP estimates were first available in 2017. As a result, only 4-6 years of retrospective analyses were available, depending on the model being considered. All three models showed some fluctuations in LRP estimates over time (Figure \@ref(fig:coho-retroLRPs)). The Logistic:IFCRT model tended to produce the most stable LRPs over time.  <!--CH: I think these next 3 plots might be easier to compare if a label for the LBM being used was directly on the figure-->
+We started the retrospective analyses for the three Logistic regression models in 2010. Throughout the time series, the Logistic:Sgen-Ricker did not convert when the estimates were truncated to 2013 and 2014. The Logistic:Sgen-priorCap model was unable to converge on an LRP estimate in 2018. All three models showed some fluctuations in LRP estimates over time (Figure \@ref(fig:coho-retroLRPs)). The Logistic:IFCRT model tended to produce the lowest estimates of LRPs over time, followed by the Logistic:Sgen-Ricker and the Logistic:Sgen-priorCap.  <!--CH: I think these next 3 plots might be easier to compare if a label for the LBM being used was directly on the figure
+CW: I think I did that, let me know if it should still be changed.-->
 
 ```{r coho-retroLRPs, fig.cap="Three-year geometric mean of aggregate spawning abundance for the Interior Fraser Coho SMU (black line) and associated time series of retrospective LRPs from logistic regression-based estimation methods. LRPs are based on a 50\\% probability that all CUs will be above their lower benchmarks. Annual LRP estimates are shown as maximum likelihood values (coloured lines) and associated 95\\% confidence intervals (shaded areas).", warning=FALSE, echo=FALSE, out.width = '50%', fig.align="center"}
 knitr::include_graphics("figure/coho_LRP_compareRetro.png")
