--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -7,7 +7,9 @@ Amendments to the Canadian Fisheries Act (2019) include new Fish Stocks provisio
 obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005].
 
 
-Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks are generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible, e.g., due to allee effects [@kronlundSelectionRoleLimit2018]. Sustainable fisheries management is based on the assumption that the rate of population increase is reduced as density dependence weakens below unfished equilbrium levels. However, increased predation rates or inability to find mates at very low abundances may reduce the the rate of population increase, creating allee effects [@chenIncorporatingAlleeEffects2002a]. LRPs are designated at levels above where these irreversible or only slowly reversible changes occur. <!--CH omit: Failing to protect stocks above the LRP  means that impacts of human disturbances such as fishing may be long term and only slowly reversible if at all.-->
+Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks are generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible, e.g., due to allee effects [@kronlundSelectionRoleLimit2018]. Sustainable fisheries management is based on the assumption that the rate of population increase is reduced as density dependence weakens below unfished equilibrium levels. However, increased predation rates or inability to find mates at very low abundances may reduce the rate of population increase, creating allee effects [@chenIncorporatingAlleeEffects2002a]. Because allee effects are rarely detected for Pacific salmon (but see Chen), a biological basis for serious harm is usually difficult to identify.
+
+LRPs are designated at levels above where these irreversible or only slowly reversible changes occur. <!--CH omit: Failing to protect stocks above the LRP  means that impacts of human disturbances such as fishing may be long term and only slowly reversible if at all.-->
 
 
 For Pacific salmon, Canada's Wild Salmon Policy, WSP, is DFO's implementation of the Precautionary Approach Framework for Pacific salmon and informs the development of LRPs. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting, Conservation Units, defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). 
@@ -47,12 +49,12 @@ The goals of this working paper were to:
 
 1. Develop candidate methods for identifying SMU-level LRPs for Pacific salmon that are consistent with the Wild Salmon Policy objective of conserving biodiversity by maintaining CUs above lower biological benchmarks.  These candidate methods include LRPs based on the status of component CUs and aggregate abundance over multiple CUs, where CU assessments can be developed using a multidimensional or single-metric approaches, as appropriate. (See \@ref(est-methods))
 
-2. Document candidate methods for developing LRPs at the SMU-level, including data requirements and assumptions. (See \@ref(est-methods)) <!-- Add ref to git repo, or to zenodo?, i.e., static version of code?-->
+2. Document candidate methods for developing LRPs at the SMU-level, including data requirements and assumptions. (See \@ref(est-methods) and \@ref(app:first-appendix)) 
 
 3. Document key uncertainties that affect LRP estimates for each method considered, including 
 uncertainties arising from missing or limited CU-level data. (See \ref(recommendations))
 
-4. Provide guidance and recommendations on the application of candidate methods over a range of data types and availability. \@ref(guidelines)
+4. Provide guidance and recommendations on the application of candidate methods over a range of data types and availability. (see \@ref(guidelines))
 
 Pacific salmon are unique among marine fish species because of their anadromous and semelparous life-history and significant meta-population structure, which results in differences in data availability and modelling approaches for assessments. These differences necessitate advice on LRP development that is specific to Pacific salmon, while being consistent with the principles for LRP development across species (Marentette et al. in prep). <!--CH: add marentette et al. in prep  to zotero,--> 
 
@@ -63,12 +65,11 @@ Pacific salmon are unique among marine fish species because of their anadromous 
 
 A companion Working Paper (Holt et al. in review) provides further details on candidate methods for developing LRPs and their implementation on three case studies. The application of the LRP methods are for demonstration purposes only, and are not meant to be formal implementation of LRPs for those SMUs. While candidate LRPs were evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step.
 
-While one role of LRPs is to trigger the development of rebuilding plans under the Fish Stock provisions, the content and implementation of rebuilding plans is beyond the scope of this paper. A full review of how LRPs can be integrated into salmon management processes outside of the Fish Stock provisions is beyond our scope, but is a gap that warrants further discussion. 
-We also do not review the current definition of 'major stock' as a SMU for Pacific salmon under the Fish Stock provisions.
+While one role of LRPs is to trigger the development of rebuilding plans under the Fish Stock provisions, the content and implementation of rebuilding plans is beyond the scope of this paper. A full review of how LRPs can be integrated into salmon management processes outside of the Fish Stock provisions is beyond our scope, but is a gap that warrants further discussion.  We also do not review the current definition of 'major stock' as a SMU for Pacific salmon under the Fish Stock provisions.
 
 Time-varying population processes, such as changes in productivity, have important impacts on biological benchmark, LRPs, and assessment against LRPs. While we describe some recent approaches for considering those changes, a full review and evaluation of impacts of time-varying parameters on LRPs is beyond our scope though is an important area of future research.
 
-While we follow the recommendation of @holtIndicatorsStatusBenchmarks2009a to assess status of CUs using multiple metrics, we have implemented this approach using a multidimensional algorithm documented in Pestal et al. (in prep), developed from the implementation of formal WSP assessments for Fraser River Sockeye Salmon [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020], Interior Fraser Coho Salmon [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon [@dfoIntegratedBiologicalStatus2016]. A full review of that algorithm is beyond the scope of this paper. 
+While we follow the recommendation of @holtIndicatorsStatusBenchmarks2009a to assess status of CUs using multiple metrics, we have implemented this approach using a multidimensional algorithm documented in Pestal et al. (in prep), developed from the implementation of formal WSP assessments for Fraser River Sockeye Salmon [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020], Interior Fraser Coho Salmon [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon [@dfoIntegratedBiologicalStatus2016]. A full review of that algorithm is beyond the scope of this paper.  Furthermore, a review of individual benchmarks of CU status is beyond the scope of this paper.
 
 Decisions about prioritizing CUs for conservation within an SMU (e.g., evaluating the costs and benefits of conserving individual CUs given differential vulnerability to climate change or other stressors) is also beyond our scope, requiring a broader discussion with managers and stakeholders.
  
